--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p class="registration_caption">FAN-GUILDをはじめるには登録が必要です</p>
             <div class="registration_form">
                 <p class="registration_form_caption">登録はこちら</p>
-                <button onclick="location.href='https://forms.gle/nC42VJZmsXmCxBCx6'">登録フォームへ</button>
+                <button onclick="location.href=''">登録フォームへ</button>
             </div>
         </section>
     </main>
