--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- ogp -->
     <meta property="og:title" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bofuri.jp/">
+    <meta property="og:url" content="https://fanguil.org/">
     <meta property="og:image" content="https://bofuri.jp/og-image.jpg">
-    <meta property="og:site_name" content="TVアニメ「痛いのは嫌なので防御力に極振りしたいと思います。」公式サイト">
-    <meta property="og:description" content="「痛いのは嫌なので防御力に極振りしたいと思います。」 TVアニメ続編制作決定！ シリーズ累計70万部突破、1億PV突破の人気作。ステータスポイントをすべて防御力に……!?最強初心者メイプルのノンストレスな大冒険、ここに開幕！">
+    <meta property="og:site_name" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
+    <meta property="og:description" content="">
     <meta name="twitter:card" content="photo">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
