--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- ogp -->
     <meta property="og:title" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fanguil.org/">
-    <meta property="og:image" content="https://bofuri.jp/og-image.jpg">
+    <meta property="og:url" content="https://fanguild.org/">
+    <meta property="og:image" content="">
     <meta property="og:site_name" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:description" content="">
     <meta name="twitter:card" content="photo">
