--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="">
     <meta property="og:site_name" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:description" content="">
-    <meta name="twitter:card" content="photo">
+    <meta name="twitter:card" content="summary">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
