--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="title:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fanguild.org/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://bofuri.jp/og-image.jpg">
     <meta property="og:site_name" content="site_name:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:description" content="description:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
