--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ogp -->
     <meta property="og:title" content="title:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fanguild.org/">
+    <meta property="og:url" content="https://bofuri.jp/">
     <meta property="og:image" content="https://bofuri.jp/og-image.jpg">
     <meta property="og:site_name" content="site_name:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:description" content="description:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
