--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- ogp -->
     <meta property="og:title" content="title:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bofuri.jp/">
-    <meta property="og:image" content="https://bofuri.jp/og-image.jpg">
+    <meta property="og:url" content="http://fanguild-6281.lolipop.io/">
+    <meta property="og:image" content="http://fanguild-6281.lolipop.io/storage/img/opg.png">
     <meta property="og:site_name" content="site_name:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:description" content="description:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta name="twitter:card" content="summary_large_image">
