--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="マンガ,キャラ,ファン,キャラクター,応援,コミュニティー">
     <meta name="description" content="FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <!-- ogp -->
-    <meta property="og:title" content="title:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
+    <meta property="og:title" content="ti:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fanguild.org/">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="site_name:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
-    <meta property="og:description" content="description:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
+    <meta property="og:description" content="de:FAN-GUILDはファンが好きなキャラを応援できるファンコミュニティです。">
     <meta name="twitter:card" content="summary_large_image">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
