--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <section id="about" class="about">
                     <h2 class="index">ABOUT</h2>
                     <p class="about_introduction">
-                        <img src="https:://fanguild.org/img/fanguild_logo.svg" alt="ファンギルドロゴ" class="about_fanguild_logo">とは
+                        <img src="img/fanguild_logo.svg" alt="ファンギルドロゴ" class="about_fanguild_logo">とは
                     </p>
                     <p class="about_explanation">キャラクターへの愛を形にできるサービスです</p>
 
